ground_ture_logs/rust/Tree/precise_platform.rs.log
Command: verifast /app/ground_true/rust/Tree/precise_platform.rs
Exit code: 1
--- STDOUT ---
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `platform`
   --> /app/ground_true/rust/Tree/precise_platform.rs:108:13
    |
108 |     thread: platform::threading::Thread,
    |             ^^^^^^^^ use of unresolved module or unlinked crate `platform`
    |
    = help: you might be missing a crate named `platform`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `platform`
   --> /app/ground_true/rust/Tree/precise_platform.rs:155:13
    |
155 |     let t = platform::threading::fork_joina...
    |             ^^^^^^^^ use of unresolved module or unlinked crate `platform`
    |
    = help: you might be missing a crate named `platform`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `platform`
   --> /app/ground_true/rust/Tree/precise_platform.rs:164:5
    |
164 |     platform::threading::join((*data).thread);
    |     ^^^^^^^^ use of unresolved module or unlinked crate `platform`
    |
    = help: you might be missing a crate named `platform`

warning: unused import: `alloc`
 --> /app/ground_true/rust/Tree/precise_platform.rs:3:26
  |
3 | use std::alloc::{Layout, alloc, handle_alloc_...
  |                          ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: function cannot return without recursing
   --> /app/ground_true/rust/Tree/precise_platform.rs:209:1
    |
209 | fn VeriFast_alloc<T>() -> *mut T { VeriFast_alloc() }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   ---------------- recursive call site
    | |
    | cannot return without recursing
    |
    = help: a `loop` may express intention better if this is on purpose
    = note: `#[warn(unconditional_recursion)]` on by default

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0433`.

--- STDERR ---

Result: FAIL
